<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/activity_main"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="annotation.com.quizapp.MainActivity">




        <TextView
                android:id="@+id/header"
                style="@style/headerCustomization"
                android:text="@string/programming_quiz" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/header"
                android:layout_marginBottom="15dp"
                android:background="@color/colorPrimary">
            </View>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/bodyStyle"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/q1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    style="@style/questionsStyle"/>

                <TextView
                    android:id="@+id/activity"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="wrap_content"
                    android:text="@string/activityQuestion"
                    style="@style/questionsStyle"/>

                <ImageView
                    android:id="@+id/activityStatus"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="20dp"
                    android:gravity="right"
                    android:background="@mipmap/ic_launcher"/>


            </LinearLayout>



            <CheckBox android:id="@+id/activity_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activityClass"/>

            <CheckBox android:id="@+id/activity_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activityClass2"/>

            <CheckBox android:id="@+id/activity_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activityClass3" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/bodyStyle"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/q2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/two"
                    style="@style/questionsStyle"/>

                <TextView
                    android:id="@+id/intent"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="wrap_content"
                    android:text="@string/intentQuestion"
                    style="@style/questionsStyle"/>

                <ImageView
                    android:id="@+id/intentStatus"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="20dp"
                    android:gravity="right"
                    android:background="@mipmap/ic_launcher"/>


            </LinearLayout>


            <EditText
                android:id="@+id/intentAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/bodyStyle"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/q3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/three"
                    style="@style/questionsStyle"/>

                <TextView
                    android:id="@+id/manifest"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="wrap_content"
                    android:text="@string/manifestQuestion"
                    style="@style/questionsStyle"/>

                <ImageView
                    android:id="@+id/manifeststatus"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="20dp"
                    android:gravity="right"
                    android:background="@mipmap/ic_launcher"/>


            </LinearLayout>

            <EditText
                android:id="@+id/manifestAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/bodyStyle"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/q4"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/four"
                    style="@style/questionsStyle"/>

                <TextView
                    android:id="@+id/viewGroup"
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    android:text="@string/viewGroupQuestion"
                    style="@style/questionsStyle"/>

                <ImageView
                    android:id="@+id/viewGroupstatus"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="20dp"
                    android:gravity="right"
                    android:background="@mipmap/ic_launcher"/>


            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioButtonGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton android:id="@+id/v_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_group_right_answer"
                    android:checked="true"/>

                <RadioButton android:id="@+id/v_wrong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_group_wrong_answer"
                    />
            </RadioGroup>


            <Button
                android:id="@+id/check_answer"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_answer"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="check_answer"/>

        </LinearLayout>

    </ScrollView>
